# gl-doc-capstone

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app_backend.py  app_frontend.py  app_frontend_helpers.py  cloudbuild.cloudrun.yaml  docker-compose.yml  llmops_presentation.pptx  pyproject.toml
.github/workflows/: llmops-ci.yml
configs/: model_pricing.yaml
data/golden/: invoice_extraction_v1.jsonl  invoice_extraction_v2.jsonl
docker/prometheus/: prometheus.yml
docs/: llmops.md  repository-file-purpose.md  repository-folder-purpose.md
llmops/: __init__.py  live_provider.py  local_extraction.py  metrics.py  pipeline.py  registry.py  reporting.py  schema.py  telemetry.py  tracing.py
outputs/: batch1_gpt_qwen_gt_comparison.csv  batch1_gpt_qwen_gt_summary.json  batch1_pdf_predictions_gpt4o.csv  batch1_pdf_predictions_qwen_local.csv  llmops-changes-summary.pptx  llmops-changes-summary.pptx.inspect.ndjson  llmops_eval_report.json  milestone1_data_profile.csv  milestone1_easyocr_sample_results.jsonl  milestone1_easyocr_sample_summary.json  milestone1_progress_artifacts.json  milestone1_validation_metrics.csv  milestone1_workflow_architecture.mmd
outputs/llmops/: live_eval_report.html  live_eval_report.json  pipeline_dag.mmd
outputs/playwright_dataset_validation/: results.csv  summary.json
prompts/: registry.yaml
schemas/: invoice_v1.json  invoice_v2.json
scripts/: deploy_cloud_run.ps1  deploy_cloud_run.sh  layout_worker.py  run_golden_eval.py  run_llmops_pipeline.py  run_playwright_dataset_validation.py
(+28 files in other folders)
