[project]
name = "teamd-milestone1"
version = "0.1.0"
description = "Milestone 1 invoice understanding Streamlit app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.0",
    "opencv-python>=4.8.0",
    "pypdfium2>=4.10.0",
    "python-docx>=0.8.11",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "streamlit>=1.28.0",
    "spacy>=3.6.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "matplotlib>=3.8.0",
    "scipy>=1.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
qwen = [
    "torch>=2.2.0",
    "transformers>=4.45.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-tmp"
pythonpath = ["."]
